syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeyManagerRegistraGrpcService {
  rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse){}
}

service KeyManagerRemoveGrpcService{
  rpc remove(RemoveChavePixRequest) returns (RemoveChavePixResponse){}
}

service KeyManagerCarregaGrpcService{
  rpc carrega(CarregaChavePixRequest) returns (CarregaChavePixResponse){}
}

service KeymanagerListaGrpcService{
  rpc lista(ListaChavesPixRequest) returns (ListaChavesPixResponse) {}
}

message RegistraChavePixRequest{
  string clienteId        = 1;
  TipoDeChave tipoDeChave = 2;
  string chave            = 3;
  TipoDeConta tipoDeConta = 4;

  enum TipoDeChave {
    UNKNOWN_TIPO_CHAVE = 0;
    CPF = 1;
    CELULAR = 2;
    EMAIL = 3;
    ALEATORIA = 4;
  }
  enum TipoDeConta {
    UNKNOWN_TIPO_CONTA = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
  }

}

message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixRequest{
  string clienteId = 1;
  string pixId = 2;
}

message RemoveChavePixResponse{
  string clienteId = 1;
  string pixId = 2;
}

message CarregaChavePixRequest{
  string name = 1;
}

message CarregaChavePixResponse{
  string message = 1;
}

message ListaChavesPixRequest{
  string name = 1;
}

message ListaChavesPixResponse{
  string message = 1;
}

